--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:background="@android:color/white"
+    android:padding="45dp"
+    android:layout_height="match_parent">
+
+  <ImageView
+      android:id="@+id/userImage"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_centerHorizontal="true"/>
 
   <TextView
-      android:id="@+id/text"
+      android:id="@+id/userName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+      android:layout_below="@id/userImage"
+      android:layout_centerHorizontal="true"
+      tools:text="Github UserName"/>
 
-</android.support.constraint.ConstraintLayout>
+  <TextView
+      android:id="@+id/publicRepos"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/userName"
+      android:layout_centerHorizontal="true"/>
+
+</RelativeLayout>
+
